# webf

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  BLINK_PLAN.md  CLAUDE.md  CNAME  COPYING.LIB  CSS_GRID_PLAN.md  ELEMENT_PANEL_INTEGRATION.md  LICENSE  README.md  THIRD_PARTY_NOTICES  buildAndRunF.sh  package-lock.json  package.json  pnpm-lock.yaml
bridge/: .gitignore  .pubignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  bridge_sources.json5  lz4.c  tsconfig.json  webf_bridge.cc  webf_bridge_test.cc
bridge/bindings/qjs/: array_methods.d.ts  atomic_string.cc  atomic_string.h  atomic_string_test.cc  binding_initializer.cc  binding_initializer.h  converter.h  converter_impl.h  dictionary_base.cc  dictionary_base.h  exception_message.cc  exception_message.h  exception_state.cc  exception_state.h  generated_code_helper.h  heap_deque.h  heap_hashmap.h  heap_vector.h  host_class.h  html_parser.cc  idl_type.h  iterable.cc  iterable.h  js_based_event_listener.cc  js_based_event_listener.h  js_event_handler.cc  js_event_handler.h  js_event_listener.cc  js_event_listener.h  macros.h  member_installer.cc  member_installer.h  microtask_queue.cc  microtask_queue.h  native_string_utils.cc  native_string_utils.h  native_value.cc  native_value.h  pending_promises.cc  pending_promises.h  (+32 more)
bridge/bindings/v8/: atomic_string.cc  atomic_string.h  atomic_string_test.cc  binding_initializer.cc  binding_initializer.h  converter_impl.h  dictionary_base.cc  dictionary_base.h  exception_state.cc  exception_state.h  exception_state_test.cc  generated_code_helper.h  idl_type.h  member_installer.cc  member_installer.h  name_client.cc  name_client.h  native_string_utils.cc  native_string_utils.h  scoped_persistent.h  script_value.cc  script_value.h  script_value_test.cc  script_wrappable.cc  script_wrappable.h  trace_wrapper_v8_reference.cc  trace_wrapper_v8_reference.h  union_base.cc  union_base.h  v8_binding_initializer.cc  v8_binding_initializer.h  v8_initializer.cc  v8_initializer.h  v8_interface_bridge_base.cc  v8_interface_bridge_base.h  v8_member_installer.cc  v8_member_installer.h  v8_object_constructor.cc  v8_object_constructor.h  v8_per_context_data.cc  (+7 more)
bridge/core/: binding_call_methods.json5  binding_object.cc  binding_object.h  bridge_polyfill.c  built_in_string.json5  core_initializer.cc  core_initializer.h  dart_binding_object.cc  dart_binding_object.h  dart_context.cc  dart_context.h  dart_context_data.cc  dart_context_data.h  dart_isolate_context.cc  dart_isolate_context.h  dart_methods.cc  dart_methods.h  defined_properties.json5  executing_context.cc  executing_context.h  executing_context_data.cc  executing_context_data.h  executing_context_test.cc  global_string.json5  js_function_ref.h  media_type_names.json5  page.cc  page.h  script_forbidden_scope.cc  script_forbidden_scope.h  script_state.cc  script_state.h
bridge/core/animation/: animation_time_delta.cc  animation_time_delta.h  effect_model.cc  effect_model.h  interpolable_value.cc  interpolable_value.h  interpolation.h  interpolation_value.h  non_interpolable_value.h  property_handle.cc  property_handle.h  timeline_inset.h  timeline_offset.cc  timeline_offset.h  timing.cc  timing.h  timing_calculations.cc  timing_calculations.h
bridge/core/api/: api.cc  api.h  character_data.cc  comment.cc  container_node.cc  css_style_declaration.cc  document.cc  document_fragment.cc  element.cc  event.cc  event_target.cc  exception_state.cc  exception_state.h  executing_context.cc  form_data.cc  form_data.d.ts  form_data.h  form_data_part.cc  form_data_part.h  html_canvas_element.cc  html_element.cc  html_image_element.cc  node.cc  script_value_ref.cc  text.cc  window.cc
bridge/core/base/: auto_reset.h  bit_cast.h  bit_field.h  bits.h  build_config.h  buildflag.h  compiler_specific.h  no_destructor.h  notreached.h  rand_util.cc  rand_util.h  render_blocking_behavior.h  template_util.h  token.cc  token.h  uuid.cc  uuid.h
bridge/core/css/: abstract_property_set_css_style_declaration.cc  abstract_property_set_css_style_declaration.h  active_style_sheets.cc  active_style_sheets.h  anchor_evaluator.h  anchor_query.cc  (+372 more)
bridge/core_rs/: Cargo.toml  README.md
bridge/foundation/: ascii_fast_path.h  ascii_types.cc  ascii_types.h  atomic_string.cc  atomic_string.h  atomic_string_table.cc  atomic_string_table.h  blink_first_paint_style_sync_test.cc  casting.h  colors.h  dart_readable.cc  dart_readable.h  decimal.cc  decimal.h  double_ui_command.cc  double_ui_command.h  dtoa.cc  dtoa.h  function.h  inspector_task_queue.cc  inspector_task_queue.h  ios_logger.mm  logging.cc  logging.h  macros.h  metrics_registry.cc  metrics_registry.h  native_byte_data.cc  native_byte_data.h  native_string.cc  native_string.h  native_type.cc  native_type.h  native_value.cc  native_value.h  native_value_converter.cc  native_value_converter.h  profiler.cc  profiler.h  ptr_util.h  (+41 more)
bridge/include/: plugin_api_gen  webf_bridge.h  webf_bridge_test.h
bridge/multi_threading/: dispatcher.cc  dispatcher.h  looper.cc  looper.h
bridge/multiple_threading/: dispatcher.cc  dispatcher.h  looper.cc  looper.h  task.h
bridge/polyfill/: package.json  rollup.config.dts.js  rollup.config.js  tsconfig.json
bridge/rs_polyfill/: Cargo.toml  cbindgen.toml
bridge/rusty_webf/: Cargo.toml
bridge/rusty_webf_sys/: .gitignore  Cargo.toml  README.md
bridge/scripts/: get_app_ver.js  read_bridge_sources_json5.js  read_quickjs_sources.js
bridge/test/: css_unittests.cmake  html_script_element_casting_test.cc  kraken_test_context.cc  kraken_test_context.h  qjs_test.cc  run_integration_test.cc  test.cmake  test_framework_polyfill.c  webf_test_context.cc  webf_test_context.h  webf_test_context_qjs.cc  webf_test_context_v8.cc  webf_test_context_v8.h  webf_test_env.cc  webf_test_env.h
bridge/typings/: .gitignore  README.md  index.d.ts  index.js  package.json  react.d.ts  react.js  tsconfig.json
webf/linux/: CMakeLists.txt  resolve_libs.js  webf_plugin.cc
webf/windows/: CMakeLists.txt  prepare.js  pthreadVC2.txt  quickjs.txt  resolve_dlls.js  webf.txt  webf_plugin.cpp
(+7384 files in other folders)
